test/errors/identifiers_error/zs/zserio_prefix_package_name_error.zs
package zserio_prefix_package_name_error; // zserio prefix!
